tests/dataset/tpc-h/compiler/kt/q2.error
kotlinc: exit status 1
OpenJDK 64-Bit Server VM warning: Options -Xverify:none and -noverify were deprecated in JDK 13 and will likely be removed in a future release.
/tmp/q2.kt:124:13: error: expecting an expression
val result =     val __sorted = target_partsupp.sortedByDescending { it.s_acctbal as Double }
            ^
/tmp/q2.kt:124:13: error: property getter or setter expected
val result =     val __sorted = target_partsupp.sortedByDescending { it.s_acctbal as Double }
            ^
/tmp/q2.kt:125:1: error: expecting a top level declaration
run {
^
/tmp/q2.kt:125:5: error: expecting a top level declaration
run {
    ^
/tmp/q2.kt:125:5: error: function declaration must have a name
run {
    ^
